<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="">
        <menu>
            <item
                android:id="@+id/your_appointments"
                android:title="@string/your_appointments" />
            <item
                android:id="@+id/your_orders"
                android:title="@string/your_orders" />
            <item
                android:id="@+id/notifications"
                android:title="@string/notifications" />
            <item
                android:id="@+id/information"
                android:title="@string/information" />
        </menu>
    </item>
    <item android:title="">
        <menu>
            <item
                android:id="@+id/logout"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>