<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/tv_product"
            style="@style/TextSemiBold.LG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/product"
            android:textColor="@color/dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/count"
            style="@style/TextBase.MD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Count"
            android:textColor="@color/dark"
            app:layout_constraintStart_toStartOf="@+id/tv_product"
            app:layout_constraintTop_toBottomOf="@+id/tv_product" />

        <TextView
            android:id="@+id/tv_count"
            style="@style/TextBase.MD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/_0"
            android:textColor="@color/dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/count" />

        <TextView
            android:id="@+id/price"
            style="@style/TextBase.MD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/price"
            android:textColor="@color/dark"
            app:layout_constraintStart_toStartOf="@+id/count"
            app:layout_constraintTop_toBottomOf="@+id/count" />

        <TextView
            android:id="@+id/tv_price"
            style="@style/TextBase.MD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/_1500"
            android:textColor="@color/dark"
            app:layout_constraintEnd_toEndOf="@+id/tv_count"
            app:layout_constraintTop_toBottomOf="@+id/tv_count" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>